# Terra

./: .gitignore  CMakeLists.txt  README.md
assets/: actors.yaml  entities.yaml  global_conf.yaml  terrarium.yaml
assets/terrariums/: default.yaml  lit.yaml  long.yaml  open.yaml  shard.yaml  swag.yaml  tunnels.yaml
assets/yaml/: entities.yaml
assets/yaml/terrariums/: coolcave.yaml  default.yaml  long.yaml  open.yaml  shard.yaml
bld/: new_class
conf/: config.yaml
conf/assets/: entities.yaml
conf/assets/terrariums/: chambers.yaml  coolcave.yaml  default.yaml  long.yaml  open.yaml  rockbugmap.yaml  shard.yaml  swag.yaml  tunnels.yaml
inc/: actor.h  background.h  common.h  component.h  entity.h  factory.h  factorysys.h  glbl_assets.h  glbl_constants.h  glbl_helpers.h  globals.h  grid.h  helpers.h  process.h  rendersys.h  spritemap.h  terrarium.h  terrariumeditor.h  vec2.h
inc/components/: calive.h  cdumbbrain.h  ceat.h  ceggbrain.h  cmovement.h  cplantbrain.h  cposition.h  crender.h  cspawn.h  csurroundings.h  ctranslate.h
inc/processes/: palive.h  pdumbbrain.h  peat.h  peggbrain.h  pmovement.h  pplantbrain.h  prender.h  pspawn.h  psurroundings.h  ptranslate.h
src/: actor.cpp  background.cpp  entity.cpp  factory.cpp  factorysys.cpp  glbl_assets.cpp  glbl_constants.cpp  glbl_helpers.cpp  globals.cpp  grid.cpp  main.cpp  rendersys.cpp  spritemap.cpp  terrarium.cpp  terrariumeditor.cpp
src/components/: calive.cpp  cdumbbrain.cpp  ceat.cpp  ceggbrain.cpp  cmovement.cpp  cplantbrain.cpp  cposition.cpp  crender.cpp  cspawn.cpp  csurroundings.cpp  ctranslate.cpp
src/processes/: palive.cpp  pdumbbrain.cpp  peat.cpp  peggbrain.cpp  pmovement.cpp  pplantbrain.cpp  prender.cpp  pspawn.cpp  psurroundings.cpp  ptranslate.cpp
tools/: component_header_template.txt  component_implementation_template.txt  new_class  process_header_template.txt  process_implementation_template.txt
